--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
 
     <string name="server_info_string">SERVER</string>
     <string name="send">Send</string>
+    <string name="api_key">AIzaSyDZmDRAvw5Nex5mUtzH-bmMse0_EWiCSo4</string>
 </resources>
